# based-inventory

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: audit-aliases.json  set-components.json
docs/: slack-app-manifest.yaml
docs/plans/: 2026-04-15-based-inventory-plan.md  2026-04-21-session-handoff.md
docs/specs/: 2026-04-15-based-inventory-design.md
src/based_inventory/: __init__.py  amazon.py  amazon_auth.py  auth.py  config.py  discontinued.py  inventory.py  registry.py  sets.py  shiphero.py  shiphero_auth.py  shopify.py  singles.py  skip_list.py  slack.py  state.py  telegram.py
src/based_inventory/crawl/: atc.py  atc_parser.py  diff.py  selectors.py  urls.py
src/based_inventory/jobs/: _common.py  anomaly_alerts.py  atc_audit.py  quantity_alerts.py  weekly_snapshot.py
tests/: conftest.py  test_amazon.py  test_anomaly_alerts.py  test_atc_audit.py  test_atc_crawler.py  test_atc_parser.py  test_auth.py  test_config.py  test_diff.py  test_discontinued.py  test_quantity_alerts.py  test_sanity.py  test_sets.py  test_shopify.py  test_singles.py  test_skip_list.py  test_slack.py  test_state.py  test_telegram.py  test_urls.py  test_weekly_snapshot.py
tests/fixtures/: no_atc_element.html  pdp_in_stock.html  pdp_sold_out.html  products_page_1.json  sitemap_index.xml  sitemap_pages.xml
