[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "based-inventory"
version = "0.1.0"
description = "Based BodyWorks inventory monitor + ATC audit"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = ["playwright: tests that require a running browser"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
